--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
 <body>
   <h1>숙소예약</h1>
   <ol>
-  <li><a href = "https://yunjaejung1992.github.io/web1/num1.html"> 평창 음악이흐르는숲 펜션</a></li>
-  <li><a href = "https://yunjaejung1992.github.io/web1/num2.html"> 평창 마띠엘 펜션</a></li>
+  <p><font size ="6">안녕하세요 정윤재입니다. 지난번에 말씀하신 평창여행 준비관련해서 자세히는 준비하지 못했지만<br> 두 가지 괜찮은 펜션이 보여서 전달드리려 이 페이지를 생성하였습니다.
+  먼저 1번 펜션의 경우 가격대는 높지만 벽난로와 고급스러움이 있구요. <br>
+  2번 펜션의 경우 가격대가 낮은 펜션중 괜찮은 방 퀄리티를 보였습니다. 그리고 아래 사진들은 페이지가 너무 심심해서 넣었습니다.</font>
+  </P>
+  
+  <p><font size ="6">아래의 링크를 클릭하시면 간략한 펜션소개와 주소를 볼수있습니다.</font></p>
+  <li><font size ="6"><a href = "https://yunjaejung1992.github.io/web1/num1.html"> 평창 작은숲 펜션</a></font></li>
+  <li><font size ="6"><a href = "https://yunjaejung1992.github.io/web1/num2.html"> 평창 마띠엘 펜션</a></font></li>
   </ol>
   
+  
+  <h1>부산여행</h1>
+  <img src="부산여행.jpg" height="300"><br>
+  우리의 첫 여행지 부산! 브런치는 잊지못한다...
+  
+  <h1>풋풋한사진</h1>
+  <img src="풋풋한사진.jpg" height="300"><br>
+  요건 우리가 너무나 풋풋해서 가져왔구요
+  
+  <h1>벗꽃구경</h1>
+  <img src="벗꽃구경.jpg" height="300"><br>
+  지금은 넘나 춥지만 날씨풀리면 가까운곳이라도가서 벗꽃구경하자.
+  
 </body>
+
