--- a/num1.html
+++ b/num1.html
@@ -6,16 +6,16 @@
 
 <body>
   <h1>소요시간 및 위치</h1>
-  <img src="1번소요시간.png" height="300" alt="1번펜션 소요시간" title="소요시간">
+  <img src="1번소요시간.png" width="300" height="300" alt="1번펜션 소요시간" title="소요시간">
   
   <h1>사용요금</h1>
   <img src="1번사용요금.png" height="300" alt="1번사용요금" title="사용요금">
   
   <h1>시설</h1>
-  <img src="1번시설1.jpg" height="300" alt="시설1" title="시설1">
-  <img src="1번시설2.png" height="300" alt="시설2" title="시설2">
+  <img src="1번시설1.jpg" width="300" height="300" alt="시설1" title="시설1">
+  <img src="1번시설2.png" width="300" height="300" alt="시설2" title="시설2">
   
   <h2>펜션링크</h2>
-  <li><a href = "http://littleforestps.com/"> 평창 작은숲 펜션</a></li>
+  <li><font size ="6"><a href = "http://littleforestps.com/"> 평창 작은숲 펜션</a></font></li>
   
 </body>
