--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   
   
   <h1>부산여행</h1>
-  <img src="부산여행.jpg" height="300" alt="부산여행" title="부산여행"><br>
+  <img src="부산여행.jpg"width="300" height="300" alt="부산여행" title="부산여행"><br>
   우리의 첫 여행지 부산! 브런치는 잊지못한다...
   
   <h1>풋풋한사진</h1>
-  <img src="풋풋한사진.jpg" height="300" alt="풋풋한사진" title="풋풋한사진"><br>
+  <img src="풋풋한사진.jpg"width="300" height="300" alt="풋풋한사진" title="풋풋한사진"><br>
   요건 우리가 너무나 풋풋해서 가져왔구요
   
   <h1>벗꽃구경</h1>
-  <img src="벗꽃구경.jpg" height="300" alt="벗꽃구경" title="벗꽃구경"><br>
+  <img src="벗꽃구경.jpg"width="300" height="300" alt="벗꽃구경" title="벗꽃구경"><br>
   지금은 넘나 춥지만 날씨풀리면 가까운곳이라도가서 벗꽃구경하자.
   
 </body>
